testdata/baselines/reference/submodule/conformance/autoAccessor11.errors.txt
autoAccessor11.ts(2,5): error TS2300: Duplicate identifier 'accessor'.
autoAccessor11.ts(2,5): error TS2300: Duplicate identifier 'accessor'.
autoAccessor11.ts(5,12): error TS2300: Duplicate identifier 'accessor'.
autoAccessor11.ts(9,5): error TS2300: Duplicate identifier 'accessor'.
autoAccessor11.ts(12,14): error TS2300: Duplicate identifier 'accessor'.
autoAccessor11.ts(12,14): error TS2300: Duplicate identifier 'accessor'.


==== autoAccessor11.ts (6 errors) ====
    class C {
        accessor
        ~~~~~~~~
!!! error TS2300: Duplicate identifier 'accessor'.
        ~~~~~~~~
!!! error TS2300: Duplicate identifier 'accessor'.
        a
    
        static accessor
               ~~~~~~~~
!!! error TS2300: Duplicate identifier 'accessor'.
        b
    
        static
        accessor
        ~~~~~~~~
!!! error TS2300: Duplicate identifier 'accessor'.
        c
    
        accessor accessor
                 ~~~~~~~~
!!! error TS2300: Duplicate identifier 'accessor'.
                 ~~~~~~~~
!!! error TS2300: Duplicate identifier 'accessor'.
        d;
    }
    